--- a/FullstackBasic/Backend/package.json
+++ b/FullstackBasic/Backend/package.json
@@ -1,6 +1,14 @@
 {
+  "name": "backend",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
+  "author": "Tanmay Sharma",
+  "license": "ISC",
   "dependencies": {
-    "express": "^4.21.2",
-    "nodemon": "^3.1.9"
+    "express": "^4.21.2"
   }
 }
